src/custom/snapshots/hugr_llvm__custom__ptr__test__ptr@pre-mem2reg@llvm14.snap
---
source: src/custom/ptr.rs
expression: module.to_string()
---
; ModuleID = 'test_context'
source_filename = "test_context"

declare void @inc_count(i8*, i64)

define { { {} }*, { {} }*, { {} }* } @_hl.main.1({ {} }* %0, { {} }* %1, { {} }* %2) {
alloca_block:
  %"0" = alloca { {} }*, align 8
  %"1" = alloca { {} }*, align 8
  %"2" = alloca { {} }*, align 8
  %"2_0" = alloca { {} }*, align 8
  %"2_1" = alloca { {} }*, align 8
  %"2_2" = alloca { {} }*, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %3 = bitcast { {} }* %0 to i8*
  call void @inc_count(i8* %3, i64 -1)
  store { {} }* %0, { {} }** %"2_0", align 8
  store { {} }* %1, { {} }** %"2_1", align 8
  %4 = bitcast { {} }* %2 to i8*
  call void @inc_count(i8* %4, i64 1)
  store { {} }* %2, { {} }** %"2_2", align 8
  %"2_11" = load { {} }*, { {} }** %"2_1", align 8
  %"2_22" = load { {} }*, { {} }** %"2_2", align 8
  %"2_23" = load { {} }*, { {} }** %"2_2", align 8
  store { {} }* %"2_11", { {} }** %"0", align 8
  store { {} }* %"2_22", { {} }** %"1", align 8
  store { {} }* %"2_23", { {} }** %"2", align 8
  %"04" = load { {} }*, { {} }** %"0", align 8
  %"15" = load { {} }*, { {} }** %"1", align 8
  %"26" = load { {} }*, { {} }** %"2", align 8
  %mrv = insertvalue { { {} }*, { {} }*, { {} }* } undef, { {} }* %"04", 0
  %mrv7 = insertvalue { { {} }*, { {} }*, { {} }* } %mrv, { {} }* %"15", 1
  %mrv8 = insertvalue { { {} }*, { {} }*, { {} }* } %mrv7, { {} }* %"26", 2
  ret { { {} }*, { {} }*, { {} }* } %mrv8
}
